--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ img {
   height: 100%;
   z-index: 1;
   background: rgba(0, 0, 0, 0.6);
+  box-shadow: inset 120px 100px 250px #000, inset -120px -100px 250px #000;
 }
 
 .showcase-top {
@@ -125,6 +126,34 @@ form {
 p.small-text {
   font-size: 1.5rem;
   margin-top: 1rem;
+}
+
+.section-item {
+  padding-top: 4.3rem;
+  border-top: 8px solid #222;
+}
+
+.content-item {
+  width: 70%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-item h1 {
+  font-size: 3.1rem;
+  margin-bottom: 0.5rem;
+}
+
+.content-item h2 {
+  font-size: 1.6rem;
+}
+
+.bottom {
+  padding-bottom: 3rem;
 }
 
 /* Buttons */
