--- a/css/style.css
+++ b/css/style.css
@@ -123,14 +123,21 @@ form {
   padding-left: 10px;
 }
 
-p.small-text {
+p.small-text,
+.f-a-q .small-text {
   font-size: 1.5rem;
   margin-top: 1rem;
+  color: #fff;
 }
 
-.section-item {
+.section-item,
+#faq {
   padding-top: 4.3rem;
   border-top: 8px solid #222;
+}
+
+#faq {
+  padding-bottom: 4.3rem;
 }
 
 .content-item {
@@ -143,7 +150,8 @@ p.small-text {
   justify-content: center;
 }
 
-.content-item h1 {
+.content-item h1,
+.f-a-q h1 {
   font-size: 3.1rem;
   margin-bottom: 0.5rem;
 }
@@ -154,6 +162,32 @@ p.small-text {
 
 .bottom {
   padding-bottom: 3rem;
+}
+
+.f-a-q {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.f-a-q ul {
+  padding-top: 2.2rem;
+  width: 45%;
+}
+
+.f-a-q ul li {
+  background: #303030;
+  width: 100%;
+  font-size: 1.625rem;
+  color: #fff;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.f-a-q .email-form {
+  padding-top: 3rem;
 }
 
 /* Buttons */
@@ -192,6 +226,7 @@ p.small-text {
   text-transform: uppercase;
 }
 
-.btn-icon {
+.btn-icon,
+.btn-icon-2 {
   margin-left: 1rem;
 }
