--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ img {
   width: 100%;
 }
 
+/* Showcase */
 .showcase {
   width: 100%;
   height: 90vh;
@@ -130,6 +131,7 @@ p.small-text,
   color: #fff;
 }
 
+/* Sections */
 .section-item,
 #faq {
   padding-top: 4.3rem;
@@ -138,6 +140,7 @@ p.small-text,
 
 #faq {
   padding-bottom: 4.3rem;
+  border-bottom: 8px solid #222;
 }
 
 .content-item {
@@ -164,6 +167,7 @@ p.small-text,
   padding-bottom: 3rem;
 }
 
+/* FAQ */
 .f-a-q {
   display: flex;
   flex-direction: column;
@@ -188,6 +192,36 @@ p.small-text,
 
 .f-a-q .email-form {
   padding-top: 3rem;
+}
+
+/* Footer */
+.footer {
+  max-width: 60%;
+  margin: 1rem auto;
+  overflow: auto;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.footer,
+.footer a {
+  color: #999;
+  font-size: 0.9rem;
+}
+
+.footer p {
+  margin-bottom: 1.5rem;
+}
+
+.footer .footer-cols {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+}
+
+.footer li {
+  line-height: 1.9;
 }
 
 /* Buttons */
