--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ img {
 /* Showcase */
 .showcase {
   width: 100%;
-  height: 90vh;
+  height: 93vh;
   position: relative;
   background: url('../img/background.jpg') no-repeat center center/cover;
 }
@@ -263,4 +263,35 @@ p.small-text,
 .btn-icon,
 .btn-icon-2 {
   margin-left: 1rem;
+}
+
+@media (max-width: 960px) {
+  .showcase {
+    height: 70vh;
+  }
+
+  .showcase-content h1 {
+    font-size: 3.7rem;
+    line-height: 1;
+  }
+
+  .showcase-content p {
+    font-size: 1.5rem;
+  }
+
+  p.small-text,
+  .f-a-q .small-text {
+    font-size: 1.1rem;
+  }
+
+  .email-form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .btn. .btn-xl {
+    font-size: 1.5rem;
+    padding: 1.4rem 2rem;
+    width: 50%;
+  }
 }
