--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Base Styles */
 :root {
   --primary-color: #e50914;
 }
@@ -21,8 +22,7 @@ ul {
 
 h1,
 h2,
-h3,
-h4 {
+h3 {
   color: #fff;
 }
 
@@ -31,9 +31,10 @@ a {
   text-decoration: none;
 }
 
+/* This may be used on h2 h3
 p {
   margin: 0.5rem 0;
-}
+} */
 
 img {
   width: 100%;
@@ -42,9 +43,10 @@ img {
 /* Showcase */
 .showcase {
   width: 100%;
-  height: 93vh;
+  height: 70vh;
   position: relative;
   background: url('../img/background.jpg') no-repeat center center/cover;
+  border-bottom: 8px solid #222;
 }
 
 .showcase::after {
@@ -56,7 +58,6 @@ img {
   height: 100%;
   z-index: 1;
   background: rgba(0, 0, 0, 0.6);
-  box-shadow: inset 120px 100px 250px #000, inset -120px -100px 250px #000;
 }
 
 .showcase-top {
@@ -66,10 +67,10 @@ img {
 }
 
 .showcase-top img {
-  width: 170px;
+  width: 6.5rem;
   position: absolute;
-  top: 30%;
-  left: 3%;
+  top: 40%;
+  left: 10%;
   transform: translate(0);
 }
 
@@ -80,6 +81,7 @@ img {
   transform: translate(-50%, -50%);
 }
 
+/* Showcase content */
 .showcase-content {
   position: relative;
   z-index: 2;
@@ -89,139 +91,50 @@ img {
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 9rem;
+  margin-top: 3rem;
 }
 
 .showcase-content h1 {
   font-weight: 700;
-  font-size: 4.2rem;
-  line-height: 1.1;
-  margin: 0 0 2rem;
-  width: 40%;
+  font-size: 1.75rem;
+  line-height: 1;
+  width: 90%;
 }
 
-.showcase-content p {
+.showcase-content h2 {
   color: #fff;
   font-weight: 400;
-  font-size: 1.9rem;
+  font-size: 1.125rem;
   line-height: 1.25;
-  margin: 0 0 2rem;
+  margin: 1rem 0;
 }
 
-form {
-  display: flex;
-  width: 80%;
-  justify-content: center;
+.showcase-content .email-form {
+  max-width: 450px;
+  margin: 0 auto;
 }
 
-.email-form input[type='email'] {
-  height: 5.4rem;
-  width: 50%;
+.email-form h3 {
+  color: #fff;
+  font-weight: 400;
+  font-size: 1.125rem;
+  line-height: 1.3;
+  padding: 0 2.8rem;
+}
+
+.email-form-inner,
+.email-form-inner a {
+  margin-top: 0.9rem;
+}
+
+input[type='email'] {
+  height: 3rem;
+  width: 100%;
 }
 
 .email-form input[type='email']::placeholder {
-  font-size: 1.5rem;
-  padding-left: 10px;
-}
-
-p.small-text,
-.f-a-q .small-text {
-  font-size: 1.5rem;
-  margin-top: 1rem;
-  color: #fff;
-}
-
-/* Sections */
-.section-item,
-#faq {
-  padding-top: 4.3rem;
-  border-top: 8px solid #222;
-}
-
-#faq {
-  padding-bottom: 4.3rem;
-  border-bottom: 8px solid #222;
-}
-
-.content-item {
-  width: 70%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 3rem;
-  align-items: center;
-  justify-content: center;
-}
-
-.content-item h1,
-.f-a-q h1 {
-  font-size: 3.1rem;
-  margin-bottom: 0.5rem;
-}
-
-.content-item h2 {
-  font-size: 1.6rem;
-}
-
-.bottom {
-  padding-bottom: 3rem;
-}
-
-/* FAQ */
-.f-a-q {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.f-a-q ul {
-  padding-top: 2.2rem;
-  width: 45%;
-}
-
-.f-a-q ul li {
-  background: #303030;
-  width: 100%;
-  font-size: 1.625rem;
-  color: #fff;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 2rem;
-  margin-bottom: 0.5rem;
-}
-
-.f-a-q .email-form {
-  padding-top: 3rem;
-}
-
-/* Footer */
-.footer {
-  max-width: 60%;
-  margin: 1rem auto;
-  overflow: auto;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.footer,
-.footer a {
-  color: #999;
-  font-size: 0.9rem;
-}
-
-.footer p {
-  margin-bottom: 1.5rem;
-}
-
-.footer .footer-cols {
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 2rem;
-}
-
-.footer li {
-  line-height: 1.9;
+  font-size: 0.875rem;
+  padding-left: 0.625rem;
 }
 
 /* Buttons */
@@ -260,6 +173,107 @@ p.small-text,
   text-transform: uppercase;
 }
 
+/* 
+form {
+  display: flex;
+  width: 80%;
+  justify-content: center;
+}
+
+/* Sections */
+/* .section-item,
+#faq {
+  padding-top: 4.3rem;
+  border-top: 8px solid #222;
+}
+
+#faq {
+  padding-bottom: 4.3rem;
+  border-bottom: 8px solid #222;
+}
+
+.content-item {
+  width: 70%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-item h1,
+.f-a-q h1 {
+  font-size: 3.1rem;
+  margin-bottom: 0.5rem;
+}
+
+.content-item h2 {
+  font-size: 1.6rem;
+}
+
+.bottom {
+  padding-bottom: 3rem;
+} */
+
+/* FAQ */
+/* .f-a-q {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.f-a-q ul {
+  padding-top: 2.2rem;
+  width: 45%;
+}
+
+.f-a-q ul li {
+  background: #303030;
+  width: 100%;
+  font-size: 1.625rem;
+  color: #fff;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding-left: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.f-a-q .email-form {
+  padding-top: 3rem;
+} */
+
+/* Footer */
+/* .footer {
+  max-width: 60%;
+  margin: 1rem auto;
+  overflow: auto;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.footer,
+.footer a {
+  color: #999;
+  font-size: 0.9rem;
+}
+
+.footer p {
+  margin-bottom: 1.5rem;
+}
+
+.footer .footer-cols {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2rem;
+}
+
+.footer li {
+  line-height: 1.9;
+} */
+
+/* 
 .btn-icon,
 .btn-icon-2 {
   margin-left: 1rem;
@@ -294,4 +308,4 @@ p.small-text,
     padding: 1.4rem 2rem;
     width: 50%;
   }
-}
+} */
