--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,121 @@ input[type='email'] {
   margin-left: 1rem;
 }
 
+@media (min-width: 740px) {
+  .showcase {
+    height: 93vh;
+  }
+
+  .showcase-content {
+    padding-top: 75px;
+  }
+
+  .showcase-content h1 {
+    font-size: 3.125rem;
+    line-height: 1.1;
+  }
+
+  .showcase-content h2 {
+    font-size: 1.625rem;
+  }
+
+  .email-form h3 {
+    font-size: 23px;
+    padding: 0;
+  }
+
+  .how-to-text h1,
+  .faq-content h1 {
+    font-size: 2.5rem;
+  }
+
+  .how-to-text h2 {
+    font-size: 1.25rem;
+  }
+
+  .faq-list {
+    width: 90%;
+    margin: 30px auto;
+  }
+}
+
+@media (min-width: 950px) {
+  .showcase {
+    height: 60vh;
+  }
+
+  .showcase-content {
+    max-width: 950px;
+  }
+
+  .showcase-content h1 {
+    max-width: 640px;
+  }
+
+  .showcase-content .email-form {
+    max-width: 950px;
+  }
+
+  div.email-form {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .email-form h3 {
+    margin-top: 1rem;
+    font-size: 19.2px;
+  }
+
+  .email-form-inner {
+    display: flex;
+  }
+
+  a.btn.btn-lg {
+    margin: 0;
+    padding-top: 1.2rem;
+  }
+
+  .email-form-inner input,
+  .email-form-inner .btn .btn-lg {
+    height: 60px;
+  }
+
+  .email-form-inner input {
+    width: 512px;
+  }
+
+  .how-to-watch {
+    height: 300px;
+  }
+  .how-to-tv {
+    max-width: 950px;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+  }
+
+  .how-to-text h1 {
+    font-size: 3.125rem;
+    text-align: left;
+    margin-bottom: 8px;
+  }
+
+  .how-to-text h2 {
+    font-size: 1.625rem;
+    text-align: left;
+  }
+
+  /*   
+    .how-to-text {
+    width: 50%;
+    /* padding-right: 40px; */
+  /* }
+
+  
+
+   */
+}
+
 /* 
 form {
   display: flex;
