--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,6 @@ a {
   text-decoration: none;
 }
 
-/* This may be used on h2 h3
-p {
-  margin: 0.5rem 0;
-} */
-
 img {
   width: 100%;
 }
@@ -43,7 +38,7 @@ img {
 /* Showcase */
 .showcase {
   width: 100%;
-  height: 70vh;
+  height: 60vh;
   position: relative;
   background: url('../img/background.jpg') no-repeat center center/cover;
   border-bottom: 8px solid #222;
@@ -199,7 +194,7 @@ input[type='email'] {
 
 /* Footer */
 .footer-wrapper {
-  padding: 50px 5%;
+  padding: 50px 10%;
 }
 
 .footer-wrapper a {
@@ -311,6 +306,10 @@ input[type='email'] {
     height: 60vh;
   }
 
+  .showcase::after {
+    box-shadow: inset 120px 100px 250px #000, inset -120px -100px 250px #000;
+  }
+
   .showcase-content {
     max-width: 950px;
   }
@@ -351,20 +350,22 @@ input[type='email'] {
     width: 512px;
   }
 
-  .how-to-watch {
-    height: 300px;
-  }
-  .how-to-tv {
-    max-width: 950px;
-    display: flex;
-    justify-content: space-between;
+  .how-to-tv,
+  .how-to-download,
+  .how-to-everywhere {
+    width: 80%;
     margin: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 3rem;
+    align-items: center;
+    justify-content: center;
   }
 
   .how-to-text h1 {
     font-size: 3.125rem;
     text-align: left;
-    margin-bottom: 8px;
+    margin-bottom: 0.75rem;
   }
 
   .how-to-text h2 {
@@ -372,142 +373,48 @@ input[type='email'] {
     text-align: left;
   }
 
-  /*   
-    .how-to-text {
-    width: 50%;
-    /* padding-right: 40px; */
-  /* }
-
-  
-
-   */
-}
-
-/* 
-form {
-  display: flex;
-  width: 80%;
-  justify-content: center;
-}
-
-/* Sections */
-/* .section-item,
-#faq {
-  padding-top: 4.3rem;
-  border-top: 8px solid #222;
-}
-
-#faq {
-  padding-bottom: 4.3rem;
-  border-bottom: 8px solid #222;
-}
-
-.content-item {
-  width: 70%;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-column-gap: 3rem;
-  align-items: center;
-  justify-content: center;
-}
-
-.content-item h1,
-.f-a-q h1 {
-  font-size: 3.1rem;
-  margin-bottom: 0.5rem;
-}
-
-.content-item h2 {
-  font-size: 1.6rem;
-}
-
-.bottom {
-  padding-bottom: 3rem;
-} */
-
-/* FAQ */
-/* .f-a-q {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.f-a-q ul {
-  padding-top: 2.2rem;
-  width: 45%;
-}
-
-.f-a-q ul li {
-  background: #303030;
-  width: 100%;
-  font-size: 1.625rem;
-  color: #fff;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  padding-left: 2rem;
-  margin-bottom: 0.5rem;
-}
-
-.f-a-q .email-form {
-  padding-top: 3rem;
-} */
-
-/* Footer */
-/* .footer {
-  max-width: 60%;
-  margin: 1rem auto;
-  overflow: auto;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-.footer,
-.footer a {
-  color: #999;
-  font-size: 0.9rem;
-}
-
-.footer .footer-cols {
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 2rem;
-}
-
-.footer li {
-  line-height: 1.9;
-} */
-
-/* 
-
-@media (max-width: 960px) {
-  .showcase {
-    height: 70vh;
+  .how-to-download .how-to-text {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
   }
 
-  .showcase-content h1 {
-    font-size: 3.7rem;
-    line-height: 1;
+  .how-to-download .how-to-image {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
   }
 
-  .showcase-content p {
-    font-size: 1.5rem;
+  .faq-content h1 {
+    font-size: 3.125rem;
+    margin-bottom: 0.75rem;
   }
 
-  p.small-text,
-  .f-a-q .small-text {
-    font-size: 1.1rem;
-  }
-
-  .email-form {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .btn. .btn-xl {
-    font-size: 1.5rem;
-    padding: 1.4rem 2rem;
+  .faq-list {
     width: 50%;
   }
-} */
+
+  .faq-list li {
+    font-size: 1.625rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .faq-content div.email-form {
+    max-width: 950px;
+    margin: 0 auto;
+  }
+
+  .email-form-inner {
+    justify-content: center;
+  }
+
+  .footer-wrapper {
+    max-width: 65%;
+    margin: 0 auto;
+  }
+
+  .footer-wrapper .footer-cols {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
